--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Alien-GPG-Error
 author  = Alex J. G. Burzyński <ajgb@cpan.org>
 license = Perl_5
 copyright_holder = Alex J. G. Burzyński <ajgb@cpan.org>
-copyright_year   = 2014
+copyright_year   = 2016
 
 [@Filter]
 -bundle=@AJGB
@@ -11,7 +11,7 @@ copyright_year   = 2014
 -remove=MakeMaker
 -remove=InstallGuide
 -remove=Test::Synopsis
--remove=KwaliteeTests
+-remove=Test::Kwalitee
 
 [AutoPrereqs]
 
