Migrate to alienfile

--- a/dist.ini
+++ b/dist.ini
@@ -8,25 +8,13 @@ copyright_year   = 2016
 -bundle=@AJGB
 -remove=Test::Portability
 -remove=ModuleBuild
--remove=MakeMaker
 -remove=InstallGuide
 -remove=Test::Synopsis
 -remove=Test::Kwalitee
 
 [AutoPrereqs]
 
-[Alien]
-:version = 0.023
-repo = file:inc
-name = gpg-error
-pattern_prefix = libgpg-error-
-pattern_version = ([\d\.]+)
-pattern_suffix = \.tar\.gz
-pattern = libgpg-error-([\d\.]+)\.tar\.gz
-
-build_command = %pconfigure --with-pic --prefix=%s
-
-install_command = make install
+[AlienBuild]
 
 [InstallGuide]
 
